Wrote some more, re-rendered pdf

--- a/system.Rmd
+++ b/system.Rmd
@@ -863,7 +863,7 @@ As you can see from the table above, selection groups are mapped to indices in r
 
 With four persistent groups (including base), many operations involving transient selection can be efficiently implemented using the third bit of the index. Specifically, as can be seen in table [REFERENCE], persistent indices range from 0 to 3 and transient indices range from 4 to 7. Thus, to determine whether a case is selected, we can do a simple bitwise check of the third bit. Likewise, to add or remove transient selection, we can set the third bit appropriately. 
 
-It is important to mention that, while not a necessity, having four persistent groups works well when for the main purpose of `Marker`s: taking products with other factors. With four groups, the number of unique group assignments is eight and the maximum index values is `2^3 - 1 = 7`, resulting in dense `Marker` indices (i.e. all index values from 0 to `cardinality - 1` are valid). If we wanted to implement more persistent selection groups, we could do so by setting a higher bit (e.g. the fourth bit for up to eight persistent groups), however, we may break the correspondence between cardinality and the number of unique indices. Practically, this may not cause any issues, however, as long as we ensure that the `Marker` cardinality is set to $2^{\text{# of the transient bit}}$ which may be different from the number of unique indices. However, I argue that, for most intents and purposes, four persistent selection groups are plenty. It is well-known that human visual capacity is limited, and having more than $4 \times 2 = 8$ different group assignments represented by different colors may overtax the visual system. Beyond that, the ability to have arbitrary number of persistent groups may be implemented in future versions in `plotscape` but has not been a priority up to this point.
+It is important to mention that, while not a necessity, having four persistent groups works well when for the main purpose of `Marker`s: taking products with other factors. With four groups, the number of unique group assignments is eight and the maximum index values is `2^3 - 1 = 7`, resulting in dense `Marker` indices (i.e. all index values from 0 to `cardinality - 1` are valid). If we wanted to implement more persistent selection groups, we could do so by setting a higher bit (e.g. the fourth bit for up to eight persistent groups), however, we may break the correspondence between cardinality and the number of unique indices. Practically, this may not cause any issues, however, as long as we ensure that the `Marker` cardinality is set to $2^{\text{index of the transient bit}}$ which may be different from the number of unique indices. However, I argue that, for most intents and purposes, four persistent selection groups are plenty. It is well-known that human visual capacity is limited, and having more than $4 \times 2 = 8$ different group assignments represented by different colors may overtax the visual system. Beyond that, the ability to have arbitrary number of persistent groups may be implemented in future versions in `plotscape` but has not been a priority up to this point.
 
 ##### Updating group assignment indices
 
@@ -1511,8 +1511,8 @@ The primary responsibility of `Scene` is to serve as a container for `Plot`s. Th
 
 On the DOM side, the `Scene` has a `container` property into which the containers of the individual plots are placed. This container is a simple `div` element which by default uses the CSS `grid` layout. When new plots are added, the dimensions of this layout are automatically updated to preserve a roughly square shape, using the following formulas to calculate the number of rows and columns:
 
-- $\text{# of columns} = \lceil \sqrt{ \text{# plots}}  \rceil$
-- $\text{# rows} = \lceil (\text{# plots}) / (\text{# columns}) \rceil$
+- $\text{number of columns} = \lceil \sqrt{ \text{number of plots}}  \rceil$
+- $\text{number of rows} = \lceil (\text{number of plots}) / (\text{number of columns}) \rceil$
 
 This results in a column-first oriented layout, with columns expanding before rows when the plot count exceeds the number of available grid cells. The users may also set the layout manually (such as via the `set_layout` `plotscaper` function).    
 
