Wrote some more

--- a/discussion.Rmd
+++ b/discussion.Rmd
@@ -1,20 +1,20 @@
 # Discussion
 
-This thesis explored the role of interaction in data visualization pipelines. More specifically, I investigated how interaction affects the four stages of data visualization pipelines - partitioning, aggregation, scaling, and rendering - and explored the inherent problems and challenges. The main thrust of my argument was that the popular model implied by the Grammar of Graphics [@wilkinson2012], which treats statistics and geometric objects as independent entities, is insufficient for describing the complex relationships between the components of interactive figures [see also @wu2024]. As an alternative, I proposed a simple category-theoretic model, conceptualizing the data visualization pipeline as a functor. 
+This thesis explored the role of interaction in data visualization pipelines. More specifically, I investigated how interaction affects the four stages of data visualization pipelines - partitioning, aggregation, scaling, and rendering - and explored the inherent problems and challenges. The core argument was that the popular model implied by the Grammar of Graphics [@wilkinson2012], which treats statistics and geometric objects as independent entities, is insufficient for describing the complex relationships between the components of interactive figures [see also @wu2024]. As an alternative, I proposed a simple category-theoretic model, conceptualizing the data visualization pipeline as a functor. 
 
-The essence of the proposed model is the idea that, initially, all visualizations begin as a collection of data subsets. In almost all cases, this collection is not arbitrary, but instead has a special kind of structure: it is a hierarchy of data partitions ordered by set union. To maintain consistency during interactions like linked selection, the subsequent steps of the data visualization pipeline should preserve this structure. In plain words, the geometric objects in our plots and the underlying summary statistics should *behave like set union*. Formally, this means that the mappings from data subsets to summary statistics and from summary statistics to geometric objects should be functors. More specifically, using the properties of set union, we can identify the underlying algebraic structures as either groups or monoids: the operations in our plots should be associative and unital, and also potentially invertible, monotonic, and commutative. When these algebraic constraints are satisfied, the geometric objects in our plots will compose well under selection, meaning that their parts add up to a meaningful whole.     
+The essence of the proposed model is as follows. Ultimately, when we visualize, we want to represent our data with a set of geometric objects. To do this, we need to break our data into a collection of subsets. This collection of subsets is not arbitrary, but, most of the time, has a very specific kind of structure: a hierarchy of data partitions ordered by set union. To maintain consistency during interactions like linked selection, the subsequent steps of the data visualization pipeline should preserve this structure. In plain words, the geometric objects in our plots and the underlying summary statistics should *behave like set union*. In category theoretic terms, this means that the mapping from data subsets to summary statistics should be a functor, and so should be the mapping from summary statistics to geometric objects. Further, using the properties of set union, we can identify specific algebraic structures that our statistics and objects should conform to: groups and monoids. Specifically, to behave consistently, the operations underlying our plots should be associative and unital, and potentially also invertible, monotonic, and commutative. When these algebraic constraints are satisfied, the geometric objects in our plots will compose well, meaning that their parts will add up to a meaningful whole, and this makes linked selection consistent.     
 
-To validate the proposed model, I developed `plotscaper`, an interactive data visualization R package. In fact, this implementation served as a crucial feedback loop, as many of the theoretical concepts emerged from practical challenges that I encountered during the design of the system. By translating theory into code, I was able to empirically test and refine assumptions about the structure and behavior of interactive data visualizations. 
+To test the proposed model, I developed `plotscaper`, an interactive data visualization R package. In fact, this implementation served as a crucial feedback loop for the development of the model, as many of the theoretical concepts emerged from practical challenges that I encountered during the design of the system. By translating theory into code, I was able to empirically test and refine assumptions about the structure and behavior of interactive data visualizations. 
 
-However, `plotscaper` was also developed to provide a practical tool for data exploration, not just theory testing. As outlined in Section \@ref(background), within the R community, there is currently no shortage of interactive data visualization packages and frameworks; however, many of these offer only fairly limited, shallow kinds of interactivity. Implementing more complex kinds of interaction, such as linked selection, representation switching, and parametric interaction (see section \@ref(common-features)) often requires substantial programming expertise and time-investment, creating a barrier to entry for casual users and solo data analysts [see e.g. @batch2017]. Thus, one of the goals of the project was to try to address this perceived lack of simple and practical tools for interactive data exploration. This hypothesis seems to have been largely proven correct by the package's moderate success - despite its relatively experimental status in comparison to other, far larger and better-established interactive data visualization frameworks, `plotscaper` has been downloaded over `r cranlogs::cran_downloads("plotscaper", from = "2024-10-01", to = Sys.Date())$count |> sum()` times^[The number only includes downloads from the RStudio CRAN mirror.], in the `r as.numeric(Sys.Date() - as.Date("2024-10-19"))` days since its initial release.
+However, `plotscaper` was also developed to provide a practical tool for data exploration, not just theory testing. As outlined in Section \@ref(background), within the R ecosystem, there is currently no shortage of interactive data visualization packages and frameworks; however, many offer only fairly basic interactive features out of the box. Implementing complex features such as linked selection, representation switching, or parametric interaction (see section \@ref(common-features)) often requires substantial programming expertise and time-investment, creating a barrier to entry for casual users [see e.g. @batch2017]. Thus, a secondary goal of this project was to try to address this perceived gap, and this goal seems to have been met with moderate success. Despite its experimental status and the fact that it is competing with a number of far larger and better-established interactive data visualization frameworks, `plotscaper` has been downloaded over `r cranlogs::cran_downloads("plotscaper", from = "2024-10-01", to = Sys.Date())$count |> sum()` times^[The number only includes downloads from the RStudio CRAN mirror.], in the `r as.numeric(Sys.Date() - as.Date("2024-10-19"))` days since its initial release.
 
-However, despite all of these relative successes, both the theoretical model and its practical implementation in `plotscaper` have certain important limitations. These will be the subject of the next few sections.
+Despite all of these relative successes, both the theoretical model and its practical implementation in `plotscaper` have, of course, their limitations. These will be the subject of the next few sections.
  
 ## Limitations of the theoretical model
 
-It is first important discuss the limitations of the theoretical model presented in this thesis. This model, described in Section \@ref(problems), conceptualizes the data visualization pipeline as a structure-preserving mapping, also known as a functor. Specifically, a key initial assumption is that, when visualizing data, we start with a hierarchy of data subsets. These subsets are disjoint (share no overlapping data) and are ordered by set inclusion/union. To produce meaningful graphics, the subsequent steps of the data visualization pipeline should preserve this inherent structure. In plain words, the transformations of data into summary statistics and of statistics into aesthetics should also *behave like set union*. In category theoretic terms, this means that the summarizing function and the rendering process have to be functors. Based on the properties of set union, this naturally identifies algebraic structures known as groups and monoids. 
+First, it is important discuss the limitations of the theoretical model presented in this thesis. This model, described in Section \@ref(problems), conceptualizes the data visualization pipeline as a structure-preserving mapping, also known as a functor. Specifically, a key initial assumption is that, when visualizing data, we start with a hierarchy of data subsets. These subsets are disjoint (share no overlapping data) and are ordered by set inclusion/union. To produce meaningful graphics, the subsequent steps of the data visualization pipeline should preserve this inherent structure. In plain words, the transformations of data into summary statistics and of statistics into aesthetics should also *behave like set union*. In category theoretic terms, this means that the summarizing function and the rendering process have to be functors. Based on the properties of set union, this naturally identifies algebraic structures as groups and monoids. 
 
-The proposed model of the data visualization pipeline naturally raises several questions and potential criticisms, some of which have been already discussed in Section \@ref(problems). These will be further reviewed and expanded upon in the following subsections. My objective is to clearly articulate the model's advantages, while also acknowledging its limitations and suggesting opportunities for future work.
+This proposed model of the data visualization pipeline naturally raises several questions and potential criticisms, some of which have been already discussed in Section \@ref(problems). These will be further reviewed and expanded upon in the following subsections. My objective is to clearly articulate the model's advantages, while also acknowledging its limitations and suggesting opportunities for future work.
 
 ### Why the model is necessary
 
@@ -22,21 +22,33 @@ First, let's briefly reiterate why the model is even necessary. As discussed in 
 
 After being subdivided into parts, the data is summarized via summary statistics and rendered as geometric objects. Importantly, the rendered objects should reflect the hierarchical part-whole structure created by the partitioning. This is the case with techniques like stacking, which represent the subdivided data subsets as highlighted parts of whole objects. While alternative techniques such as dodging or layering do exist, they provide a subpar solution for interactive graphics (see Section \@ref(stacking-part-whole)). 
 
-However, a key insight is that the graphical representation is *not* independent of the way we summarize our data. Specifically, as discussed in Section \@ref(stackable-or-not), regarding stacking, past data visualization researchers have noted the fact that while some summary statistics such as sums or counts can be effectively stacked, others like averages or quantiles cannot [see e.g. @wilke2019; @wills2011; @wu2022]. For instance, while the sum of sums or maximum of maximums represent valid overall statistics, the average of averages is different from grand mean.
+However, a key insight is that the graphical representation is *not* independent of the way we summarize our data. Specifically, as discussed in Section \@ref(stackable-or-not), regarding stacking, past data visualization researchers have noted the fact that while some summary statistics such as sums or counts can be effectively stacked, others like averages or quantiles cannot [see e.g. @wilke2019; @wills2011; @wu2022]. For instance, while the sum of sums or maximum of maximums represent valid overall statistics, the average of averages is different from grand mean. To formally describe this property of "stackability", we can leverage some fundamental ideas from category theory/abstract algebra.
 
-Thus, when implementing data visualization features like linked selection, it is really useful to know which summary statistics will play well with the part-whole (stacking) model. As demonstrated throughout Section \@ref(problem), this idea can be formalized by identifying the fundamental underlying operation as set union - the data representing parts of objects is combined together to form a whole, and so should the derived summary statistics. This naturally leads to some algebraic ideas that will be explored in the following subsections.
+By grounding our reasoning in this algebraic model, we can quickly identify which combinations of statistics and geometric objects will behave well under linked selection. For instance, since we know that the average operator is not monoidal, we know that it will not be stackable and will pose certain challenges if we try to implement it alongside linked selection. Further, the model also allows us to identify what *kinds* of linked selection will work. For instance, while the maximum and the convex hull operators are monoids, they both lack inverse (they are not groups, in the algebraic sense), and thus we know that they will be able to display the selection of one highlighted group, however, they will not work for comparisons of multiple selection groups (see Section \@ref(groups-inverses)). 
 
 ### Disjointness
 
-A point which is important to discuss early is that the partition hierarchy model does not describe *all* types of plots in use today. For instance, it precludes visualizations where geometric objects within the same graphical layer represent overlapping data subsets, as seen, for example, in certain visualizations of set-typed data [see e.g. @alsallakh2014] or two-dimensional kernel density plots (see Section \@ref(comparison-disjointness)). However, these visualizations represent a fraction of available plot types. In the vast majority of "standard" plots - including barplots, histograms, scatterplots, density plots, heatmaps, violin plots, boxplots, lineplots, and parallel coordinate plots - each geometric object represents a distinct subset of cases^[As a short exercise, I tried going through `ggplot2`'s list of [`geoms`](https://ggplot2.tidyverse.org/reference/) and identifying all non-disjoint data representations. The only examples I have been able to find have been find were `geom`s based on two-dimensional kernel density estimates, i.e. `geom_density_2d` and `geom_density_2d_filled` (each line or polygon represents densities computed across all datapoints).].
+A point which is important to discuss is that the partition hierarchy model does not describe *all* types of plots in use today. For instance, it precludes visualizations where geometric objects within the same graphical layer represent overlapping data subsets, as seen, for example, in certain visualizations of set-typed data [see e.g. @alsallakh2014] or two-dimensional kernel density plots (see Section \@ref(comparison-disjointness)). However, these visualizations represent a fraction of available plot types. In the vast majority of "standard" plots - including barplots, histograms, scatterplots, density plots, heatmaps, violin plots, boxplots, lineplots, and parallel coordinate plots - each geometric object represents a distinct subset of cases^[As a short exercise, I tried going through `ggplot2`'s list of [`geoms`](https://ggplot2.tidyverse.org/reference/) and identifying all non-disjoint data representations. The only examples I have been able to find have been find were `geom`s based on two-dimensional kernel density estimates, i.e. `geom_density_2d` and `geom_density_2d_filled` (each line or polygon represents densities computed across all datapoints).].
 
-Further, in Section \@ref(comparison-disjointness), I argued that this tendency towards disjoint data representations is not a mere convention or accident, but instead stems from a fundamental naturality of disjointness. Disjointness underlies many fundamental concepts in statistics, programming, and mathematics, and, in general, seems to align better with our cognitive processes (see Section \@ref(comparison-disjointness)). Put simply, reasoning about objects which are disjoint is easier than about objects which are entangled [see also @hickey2011].
+Further, in Section \@ref(comparison-disjointness), I argued that this tendency towards disjoint data representations is not a mere convention or accident, but instead stems from a fundamental naturality of disjointness. Disjointness underlies many fundamental concepts in statistics, programming, and mathematics, and, in general, seems to align better with our cognitive processes (see Section \@ref(comparison-disjointness)). Put simply, reasoning about objects which are distinct is easier than about objects which are entangled [see also @hickey2011].
 
-Thus, while not the exclusive model, I argue that disjointness provides a good general model for data visualization, just as it does in the other fields mentioned above. Furthermore, disjointness seems to be particularly well-suited to interactive data visualization, and, conversely, with non-disjoint data representations, many interactive features may prove difficult or even impossible to implement. For instance, how would one implement non-trivial linked selection (or querying) with a two-dimensional kernel density plot, without referring to the underlying (disjoint) data points? Like manipulating objects in the real world, I content that it is far easier to interact with geometric objects that represent distinct data entities.  
+Thus, while not the only option, I argue that disjointness provides a good default model for data visualization, just as it does in the other fields mentioned above. Furthermore, disjointness seems to be particularly well-suited to interactive data visualization, and, conversely, with non-disjoint data representations, many interactive features may prove difficult or even impossible to implement. For instance, how would one implement non-trivial linked selection with a two-dimensional kernel density plot, without referring to the underlying (disjoint) data points? To summarize, in general, objects which represent distinct data entities are far easier to reason about and manipulate interactively.
 
-###
+### Associativity and unitality
 
-Another potential point of contention are the limitations that the model imposes. Requiring that all graphics and the underlying summary statistics are (monotonic, commutative) monoids or groups excludes a non-trivial fraction of popular plot types. For instance, boxplots are entirely made out of non-monoidal summary statistics, nevertheless, they have been successfully implemented alongside linked selection in some interactive data visualization packages [see e.g. @theus2002; @urbanek2011]. However, the point of the model is not to say that certain kinds of visualizations can never be reconciled with linked selection, instead, it is to easily identify certain "natural" types of visualization where linked selection is inherently compatible. We are free to violate this naturality when we see fit, however, we should be aware of the fact that the reconciliation of these non-compliant visualizations may require some ad-hoc solutions. 
+The core idea of the model is preservation of the properties of set union. Among these, the two most important ones are associativity, allowing for arbitrary ordering of operations, and unitality, guaranteeing the existence of a neutral element. Together, these two primary properties identify monoids as the fundamental algebraic structure.
+
+This connection between set union and monoids is not novel. For instance, monoids have long been known to have desirable properties for parallel computing [see e.g. @parent2018; @fegaras2017; @lin2013]. More broadly, monoids are also popular functional programming [see e.g. @milewski2018], and form the basis of certain algorithms in generic programming [@stepanov2009; @stepanov2013]. Finally, monoids and other concepts from category theory have also been used in certain areas of relational database theory [see e.g. @fong2018; @gibbons2018]
+
+However, as far as I am aware, I am the first to make the connection between monoids and many popular visualization types. As discussed in Section \@ref(visualization-category-theory), the model described in the present thesis differs significantly from past applications of category theory to data visualization, being on one hand more applied than some applications (it relates to concrete statistics, geometric objects, and interactive features) and more theoretical than others (not a functional programming library). 
+
+Interestingly, the challenges we face we face when visualizing data are in some ways remarkably similar to the parallel computing: often, we want to break the data into parts, compute some summaries, and the combine these summaries back together in a consistent way.
+
+### Model constraints and utility
+
+A potential point of contention is that the constraints which the model provides are too rigid. Specifically, requiring all plots to be groups or monoids excludes a significant fraction of popular visualizations. Further, many non-monoidal plot types, such as boxplots, have been successfully implemented alongside linked selection in the past [see e.g. @theus2002; @urbanek2011]. Thus, a valid question one might have is whether the limitations imposed by the model are justified by its practical utility.
+
+However, I believe this is not an issue, since the model is not meant to be prescriptive. Instead, it simply provides a framework for identifying visualizations which are "naturally" compatible with features like linked selection, and we are free to violate this naturality whenever we see fit. However, we should be aware of the fact that reconciling non-monoidal visualizations with linked selection may require some ad hoc design decisions. For instance, since a boxplot box is not a monoid, there is no such thing as highlighting a "part of a boxplot box". We may solve this issue by e.g. plotting the highlighted cases as a second box next to the original one, however, then we lose the nice interactive properties of part-whole relations provided by monoidal plots (see Section \@ref(stacking-part-whole)). Thus, the model helps us to identify inherent trade-offs in the design and implementation of interactive graphics.    
 
 ## Limitations of the software
 
@@ -46,5 +58,12 @@ As discussed in Section \@ref(system), one shortcoming of my system is the absen
 
 Further, 
 
+### Performance
 
+A key aspect to discuss is the performance of the delivered software. As discussed in Section \@ref(background), responsiveness is crucial for interactive data visualization. Slow systems frustrate users, negating any potential benefits of sophisticated features. Given today's expectation of highly responsive GUIs and the growing size of data sets, performance is an important concern.
 
+Despite not being the sole focus, I am happy to report that `plotscaper` achieves solid performance even on moderately sized data sets. Specifically, I was able to achieve highly responsive point-wise linked selection on data sets with tens of thousands of data points (such as the `diamonds` data set; see the [Performance vignette](https://bartonicek.github.io/plotscaper/articles/performance.html) on `plotscaper`'s package website). This performance is, of course, largely attributable to the highly optimized nature of JavaScript engines such as V8 rather than any targeted optimization. Nevertheless, I did try to be generally mindful of performance while developing the package, by adhering to data oriented practices such as relying on the Structure of Arrays (SoA) data layout.  
+
+Profiling of the package revealed that the primary performance bottleneck was rendering. This manifests quite clearly even on the macro level: figures composed entirely of aggregate plots tend remain responsive even with fairly large data sets, whereas figures with multiple bijective plots (such as scatterplots or parallel coordinate plots) can start to become sluggish even with moderately-sized data sets (thousands or tens-of-thousands of data points). Therefore, alternative rendering strategies may offer significant performance gains. Currently, `plotscaper` relies on HTML5 `canvas`, a simple bitmap-based rendering element. In the future, GPU-based rendering, particularly WebGL [@webgl2025], could be used to potentially greatly improve performance.
+
+Beyond rendering, there are other parts of the system that may provide opportunities for easy performance wins. For instance, currently, querying and selection both rely on a naive implementation of collision detection, whereby (potentially) all objects are looped through until matches are found. An approach based on spatial data structures, for example quadtrees [@samet1988], could significantly accelerate these searches. Furthermore, while reactivity is implemented using the - fairly performant - simple observer pattern, and event callbacks throttled on hot paths (such as mousemove events), further optimizations of the reactive system may also be possible. Finally, though less performance critical, client-server communication could also be made more performant. Currently, it is implemented with WebSockets [@cheng2024; @mdn2024g] and JSON-based payloads, which incurs serialization/deserialization overhead on each message. An alternative protocol like TCP could mitigate this.
