--- a/references.bib
+++ b/references.bib
@@ -12,6 +12,26 @@
   publisher	= {Now Publishers, Inc.}
 }
 
+@article{fegaras2017,
+  title={An algebra for distributed big data analytics},
+  author={Fegaras, Leonidas},
+  journal={Journal of Functional Programming},
+  volume={27},
+  pages={e27},
+  year={2017},
+  publisher={Cambridge University Press}
+}
+
+@misc{parent2018,
+	author = {Parent, Sean},
+	title = {{Generic Programming}},
+	year = {2018},
+	month = oct,
+	publisher = {Pacific++},
+	note = {[Online; accessed 24. Mar. 2025]},
+	url = {https://www.youtube.com/watch?v=iwJpxWHuZQY&t=4183s}
+}
+
 @phdthesis{adam2017,
   title={Systems, generativity and interactional effects},
   author={Adam, Elie M},
@@ -2711,6 +2731,15 @@
   url		= {https://plotly.com}
 }
 
+@article{samet1988,
+  title={An overview of quadtrees, octrees, and related hierarchical data structures},
+  author={Samet, Hanan},
+  journal={Theoretical Foundations of Computer Graphics and CAD},
+  pages={51--68},
+  year={1988},
+  publisher={Springer}
+}
+
 @misc{webgl2025,
 	title = {{WebGL: 2D and 3D graphics for the web - Web APIs {$\vert$} MDN}},
 	journal = {MDN Web Docs},
@@ -3238,6 +3267,18 @@
   note		= {[Online; accessed 25. Oct. 2024]},
   url		= {https://archive.fosdem.org/2024/schedule/event/fosdem-2024-2773-fast-javascript-with-data-oriented-design}
 }
+
+@article{gibbons2018,
+  title={Relational algebra by way of adjunctions},
+  author={Gibbons, Jeremy and Henglein, Fritz and Hinze, Ralf and Wu, Nicolas},
+  journal={Proceedings of the ACM on Programming Languages},
+  volume={2},
+  number={ICFP},
+  pages={1--28},
+  year={2018},
+  publisher={ACM New York, NY, USA}
+}
+
 
 @Book{		  stepanov2009,
   title		= {Elements of programming},
